# AlphaCrafter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alphacrafter/: __init__.py  __main__.py
alphacrafter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alphacrafter/agents/: __init__.py  default_factors.py  factor_exec.py  miner.py  screener.py  trader.py
alphacrafter/backtest/: __init__.py  vectorized.py
alphacrafter/config/: __init__.py  settings.py
alphacrafter/data/: __init__.py  historical.py  local_klines.py  panel.py  splits.py  universe.py
alphacrafter/memory/: __init__.py  schema.sql  shared_memory.py
alphacrafter/metrics/: __init__.py  ic.py
alphacrafter/orchestration/: __init__.py  loop.py  panel_hints.py
alphacrafter/prompts/: __init__.py  loader.py  miner_agent.md  miner_agent_crypto.md  screener_agent.md  trader_agent.md  universal_us_market.md
alphacrafter/reporting/: __init__.py  artifacts.py  crypto_validation.py
alphacrafter/utils/: __init__.py  llm.py  llm_interaction_log.py
scripts/: init_shared_memory.py  plot_diagnostics.py  run_alphacrafter.py  run_crypto_paper_workflow.sh  run_crypto_train_validate_workflow.sh  scrape_sp500.py  setup_linux.sh  validate_experiment.py
tests/: test_agents_offline.py  test_crypto_validation.py  test_llm_log.py  test_llm_openai_text.py  test_local_klines.py  test_panel_hints.py  test_paper_splits.py  test_phase1_smoke.py  test_plot_diagnostics.py  test_prompts_load.py  test_vectorized_metrics.py
