[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alphacrafter"
version = "0.1.0"
description = "Multi-agent quantitative trading framework (AlphaCrafter reproduction)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "charset-normalizer>=3.2.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "lxml>=4.9.0",
    "anthropic>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"alphacrafter.prompts" = ["*.md"]
